--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="project-card">
-                        <img src="image1.jpg" alt="Project 1">
+                        <img src="./images/image1.jpg" alt="Project 1">
                         <h5>Project 1</h5>
                         <a href="http://127.0.0.1:5500/index.html?" target="_blank">View</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="project-card">
-                        <img src="image2.png" alt="Project 2">
+                        <img src="./images/image2.png" alt="Project 2">
                         <h5>Project 2</h5>
                         <a href="http://127.0.0.1:5500/index.html?" target="_blank">View</a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="project-card">
-                        <img src="image1.jpg" alt="Project 3">
+                        <img src="./images/image3.png" alt="Project 3">
                         <h5>Project 3</h5>
                         <a href="http://127.0.0.1:5500/index.html?" target="_blank">View</a>
                     </div>
